--- a/app/views/maps/index.html.erb
+++ b/app/views/maps/index.html.erb
@@ -59,7 +59,7 @@ body {
   </head>
 <body>
 <script async defer 
-          src="https://maps.googleapis.com/maps/api/js?key=PUTYOURKEYHERE&callback=initMap"></script>
+          src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDQ34ms3M_DWo8g4Pd538a5GLMNQmja7yI&callback=initMap"></script>
 <table class="Head" , style="width:100%">
   <tr>
 <th><h2 class = "heading">TweetMaps</h2></th>
@@ -120,10 +120,30 @@ body {
 <div >
   <div id="map" ></div>
 </div>
-
-
+<div id = "demo"> </div>
 <script type="text/javascript">
+  function codeAddress() {
+    var xhr = new XMLHttpRequest();
+    xhr.open("GET", "messaging?messaging=awesome", true);
+    xhr.send(null);
+    xhr.onreadystatechange = function(){
+      if(this.readyState == 4 && this.status == 200){
+        document.getElementById("demo").innerHTML = this.responseText;
+      }
+    }
+  }
+  window.setInterval(codeAddress, 5000)
   var map;
+  function pinSymbol(color) {
+    return {
+        path: 'M 0,0 C -2,-20 -10,-22 -10,-30 A 10,10 0 1,1 10,-30 C 10,-22 2,-20 0,0 z M -2,-30 a 2,2 0 1,1 4,0 2,2 0 1,1 -4,0',
+        fillColor: color,
+        fillOpacity: 1,
+        strokeColor: '#000',
+        strokeWeight: 2,
+        scale: 1,
+   };
+  }
   function initMap() {
     map = new google.maps.Map(document.getElementById('map'), {
       center: {
@@ -135,17 +155,35 @@ body {
 
     var latitudes   = [];
     var longitudes  = [];
+    var sentiments  = [];
     <% @maps.each do |map| %>
       latitudes.push(<%= map["latitude"] %>);
       longitudes.push(<%= map["longitude"] %>);
+      sentiments.push(<%= map["sentiment"]%>);
     <% end %>
 
+    <% @prev_maps = (@maps << {'lat' => 1})%>
     var marker, i;
     for (i = 0; i < latitudes.length; i++) {
-      marker = new google.maps.Marker({
-        position: new google.maps.LatLng(latitudes[i], longitudes[i]),
-        map: map
-      });
+      if (sentiments[i] == 0){
+        marker = new google.maps.Marker({
+          position: new google.maps.LatLng(latitudes[i], longitudes[i]),
+          map: map,
+          icon: pinSymbol("#FFF"),
+        });
+      }else if(sentiments[i] == 1){
+        marker = new google.maps.Marker({
+          position: new google.maps.LatLng(latitudes[i], longitudes[i]),
+          map: map,
+          icon: pinSymbol("#0F0"),
+        });
+      }else{
+        marker = new google.maps.Marker({
+          position: new google.maps.LatLng(latitudes[i], longitudes[i]),
+          map: map,
+          icon: pinSymbol("#F00"),
+        });
+      }
 
       google.maps.event.addListener(marker, 'click', (function (marker, i) {
         return function () {
@@ -155,8 +193,7 @@ body {
   }
   initMap(); 
 </script>
-
-
+<%= @flag%>
 <!-- jQuery (Bootstrap JS plugins depend on it) -->
   <script src="js/jquery-1.11.3.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
