--- a/app/views/maps/index.html.erb
+++ b/app/views/maps/index.html.erb
@@ -21,7 +21,7 @@
 body {
   margin-top: 0px;
   padding-top: 0px;
-  background-color:     #FFEBCD;
+  background-color:     #FFFFFF;
 }
 #map {
    border-color: #cc0000;
@@ -59,7 +59,7 @@ body {
   </head>
 <body>
 <script async defer 
-          src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDQ34ms3M_DWo8g4Pd538a5GLMNQmja7yI&callback=initMap"></script>
+          src="src link"></script>
 <table class="Head" , style="width:100%">
   <tr>
 <th><h2 class = "heading">TweetMaps</h2></th>
